// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationDropdown render 0/2 completed 1`] = `
<div
  className="activation-dropdown-button--hidden nav-link p-0 btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=" activation-dropdown-button__animated-button bg-transparent d-flex align-items-center e2e-activation-nav-item-toggle nav-link"
    href="#"
    onClick={[Function]}
  >
    <div
      className="activation-dropdown-button__confetti"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      />
    </div>
    Get started
    <div
      className="activation-dropdown-button__confetti"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      />
    </div>
    <span
      className="activation-dropdown-button__progress-bar-container"
    >
      <svg
        className="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        data-test-id="CircularProgressbar"
        style={Object {}}
        viewBox="0 0 100 100"
      >
        <path
          className="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "0px",
            }
          }
        />
        <path
          className="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "NaNpx",
            }
          }
        />
      </svg>
    </span>
  </a>
  <div
    aria-hidden={true}
    className="activation-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-item-text activation-dropdown-header"
      href="/onboard/guide"
    >
      <h3>
        Welcome to Sourcegraph
      </h3>
      <p
        className="mb-1"
      >
        Complete the steps below to finish onboarding!
      </p>
    </a>
    <div
      className="dropdown-divider"
      onClick={[Function]}
      tabIndex="-1"
    />
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail1"
        onClick={[Function]}
      >
        <button
          className="btn btn-link text-left w-100 p-0"
          type="button"
        >
          <div>
            <CheckboxBlankCircleIcon
              className="icon-inline text-muted"
            />
            <span
              className="mr-2 ml-2"
            >
              title1
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail2"
        onClick={[Function]}
      >
        <a
          href="/some/url"
        >
          <div>
            <CheckboxBlankCircleIcon
              className="icon-inline text-muted"
            />
            <span
              className="mr-2 ml-2"
            >
              title2
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationDropdown render 1/2 completed 1`] = `
<div
  className="activation-dropdown-button--hidden nav-link p-0 btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=" activation-dropdown-button__animated-button bg-transparent d-flex align-items-center e2e-activation-nav-item-toggle nav-link"
    href="#"
    onClick={[Function]}
  >
    <div
      className="activation-dropdown-button__confetti"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      />
    </div>
    Get started
    <div
      className="activation-dropdown-button__confetti"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      />
    </div>
    <span
      className="activation-dropdown-button__progress-bar-container"
    >
      <svg
        className="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        data-test-id="CircularProgressbar"
        style={Object {}}
        viewBox="0 0 100 100"
      >
        <path
          className="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "0px",
            }
          }
        />
        <path
          className="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "0px",
            }
          }
        />
      </svg>
    </span>
  </a>
  <div
    aria-hidden={true}
    className="activation-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-item-text activation-dropdown-header"
      href="/onboard/guide"
    >
      <h3>
        Welcome to Sourcegraph
      </h3>
      <p
        className="mb-1"
      >
        Complete the steps below to finish onboarding!
      </p>
    </a>
    <div
      className="dropdown-divider"
      onClick={[Function]}
      tabIndex="-1"
    />
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail1"
        onClick={[Function]}
      >
        <button
          className="btn btn-link text-left w-100 p-0"
          type="button"
        >
          <div>
            <CheckIcon
              className="icon-inline text-success"
            />
            <span
              className="mr-2 ml-2"
            >
              title1
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail2"
        onClick={[Function]}
      >
        <a
          href="/some/url"
        >
          <div>
            <CheckboxBlankCircleIcon
              className="icon-inline text-muted"
            />
            <span
              className="mr-2 ml-2"
            >
              title2
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationDropdown render loading 1`] = `
<div
  className="activation-dropdown-button--hidden nav-link p-0 btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=" activation-dropdown-button__animated-button bg-transparent d-flex align-items-center e2e-activation-nav-item-toggle nav-link"
    href="#"
    onClick={[Function]}
  >
    <div
      className="activation-dropdown-button__confetti"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      />
    </div>
    Get started
    <div
      className="activation-dropdown-button__confetti"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      />
    </div>
    <span
      className="activation-dropdown-button__progress-bar-container"
    >
      <svg
        className="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        data-test-id="CircularProgressbar"
        style={Object {}}
        viewBox="0 0 100 100"
      >
        <path
          className="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "0px",
            }
          }
        />
        <path
          className="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "276.46015351590177px",
            }
          }
        />
      </svg>
    </span>
  </a>
  <div
    aria-hidden={true}
    className="activation-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <a
      className="dropdown-item-text activation-dropdown-header"
      href="/onboard/guide"
    >
      <h3>
        Welcome to Sourcegraph
      </h3>
      <p
        className="mb-1"
      >
        Complete the steps below to finish onboarding!
      </p>
    </a>
    <div
      className="dropdown-divider"
      onClick={[Function]}
      tabIndex="-1"
    />
    <div
      className="activation-dropdown-button__loader"
    >
      <div
        className="loading-spinner icon-inline"
      />
    </div>
  </div>
</div>
`;
